<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="home">Home</string>
    <string name="explorer">Search</string>
    <string name="profile">Account</string>
    <string name="not_specified">Not specified</string>
    <string name="main_picture">Main Picture</string>
    <string name="logo_surface">Logo surface</string>
    <string name="bed_logo">Bed logo</string>
    <string name="bed_s">Bed(s)</string>
    <string name="house_logo">House logo</string>
    <string name="room_s">Room(s)</string>
    <string name="bathtub_logo">Bathtub Logo</string>
    <string name="bathroom_s">Bathroom(s)</string>
    <string name="location_logo">Location Logo</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="added_on">Added on</string>
    <string name="by">by</string>
    <string name="reference">Reference</string>
    <string name="price">Price</string>
    <string name="modify_now">Modify property</string>
    <string name="main_picture_description">Main picture description</string>
    <string name="add_new_property">Add new property</string>
    <string name="property_type">Property type*</string>
    <string name="rooms">Rooms*</string>
    <string name="beds">Beds*</string>
    <string name="bathrooms">Bathrooms*</string>
    <string name="surface">Surface</string>
    <string name="price_with_star">Price*</string>
    <string name="address_with_star">Address*</string>
    <string name="options">Options</string>
    <string name="description">Description*</string>
    <string name="photos">Photos*</string>
    <string name="property_details">Property details</string>
    <string name="photos_added">Photos added</string>
    <string name="remove">Remove</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take photo</string>
    <string name="record_photo">Record photo</string>
    <string name="modify_property">Modify property</string>
    <string name="save_property">Save property</string>
    <string name="sold_on">Sold on</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="max">Max</string>
    <string name="and">and</string>
    <string name="min">Min</string>
    <string name="sold_date">Sold date</string>
    <string name="entry_date">Entry date</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="agent_name_with_star">Agent name*</string>
    <string name="reset">Reset</string>
    <string name="asc_price">Asc Price</string>
    <string name="desc_price">Desc Price</string>
    <string name="map">Map</string>
    <string name="real_estate_loan_simulator">Real estate loan simulator</string>
    <string name="calculating_your_monthly_mortgage_payments">Home loan calculator</string>
    <string name="your_monthly_payment_will_be">Your monthly payment will be</string>
    <string name="month">$/month</string>
    <string name="amount_of_your_loan">Amount of your loan</string>
    <string name="duration_of_your_loan">Duration of your loan</string>
    <string name="years">years</string>
    <string name="interest_rate_before_negotiation">Interest rate before negotiation</string>
    <string name="insurance_rates">Insurance rates</string>
    <string name="in_insurance">$ in insurance</string>
    <string name="with">$ with</string>
    <string name="cost_of_credit">Cost of credit:</string>
    <string name="_0">0</string>
    <string name="dollar">$</string>
    <string name="_15">15</string>
    <string name="_1_65">1.65</string>
    <string name="percentage">%</string>
    <string name="_0_34">0.34</string>
    <string name="calculate">Calculate</string>
    <string name="button_add_year">Button add year</string>
    <string name="button_remove_year">Button remove year</string>
    <string name="add_photo_description">ADD PHOTO DESCRIPTION</string>
    <string name="sold">SOLD</string>
    <string name="search_properties_with_address_area">Search properties with address area</string>
    <string name="photos_without_star">Photos</string>
    <string name="euro">€</string>
</resources>
