<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_top_sort"
        android:enabled="true"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom" >

        <menu>
            <item
                android:id="@+id/sort_price_asc"
                android:enabled="true"
                android:title="@string/asc_price" />

            <item
                android:id="@+id/sort_price_desc"
                android:enabled="true"
                android:title="@string/desc_price" />

            <item
                android:id="@+id/sort_type"
                android:enabled="true"
                android:title="@string/type" />

            <item
                android:id="@+id/sort_status"
                android:enabled="true"
                android:title="@string/status" />
        </menu>

    </item>

</menu>