<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddPropertyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:text="@string/add_new_property"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/button_add_new_property"
            android:text="@string/add_new_property"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_static_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/photos"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_photos" />

            <Button
                android:id="@+id/button_add_photo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_photo"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_photos" />

            <Button
                android:id="@+id/button_take_photo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:textColor="#FFFFFF"
                android:text="@string/take_photo"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_photos" />

            <TextView
                android:id="@+id/textview_static_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/property_type"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_add_photo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textview_static_rooms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_type" />

            <TextView
                android:id="@+id/textview_static_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/rooms"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_type" />

            <EditText
                android:id="@+id/editText_rooms"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textview_static_rooms"
                app:layout_constraintStart_toStartOf="@+id/textview_static_rooms"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_rooms"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_beds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beds"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/textview_static_bathrooms"
                app:layout_constraintStart_toEndOf="@+id/textview_static_rooms"
                app:layout_constraintTop_toTopOf="@+id/textview_static_rooms" />

            <EditText
                android:id="@+id/editText_beds"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textview_static_beds"
                app:layout_constraintStart_toStartOf="@+id/textview_static_beds"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_beds"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_bathrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/bathrooms"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textview_static_beds" />

            <EditText
                android:id="@+id/editText_bathrooms"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textview_static_bathrooms"
                app:layout_constraintStart_toStartOf="@+id/textview_static_bathrooms"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_bathrooms"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/surface"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_bathrooms" />

            <EditText
                android:id="@+id/editText_surface"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="@+id/textview_static_surface"
                app:layout_constraintStart_toStartOf="@+id/textview_static_surface"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_surface"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_with_star"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/editText_bathrooms"
                app:layout_constraintStart_toStartOf="@+id/textview_static_beds"
                app:layout_constraintTop_toTopOf="@+id/textview_static_surface" />

            <EditText
                android:id="@+id/editText_price"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:gravity="center"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/textview_static_description"
                app:layout_constraintStart_toStartOf="@+id/textview_static_description"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_description"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/address_with_star"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_surface" />

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:focusable="false"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_address"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/options"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_address" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_option"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textview_static_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_options" />

            <TextView
                android:id="@+id/textview_static_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/description"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_options" />

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:importantForAutofill="no"
                android:inputType="textLongMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_price"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textview_static_agent_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/agent_name_with_star"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_description" />

            <EditText
                android:id="@+id/editText_agent_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_static_agent_firstname"
                tools:ignore="LabelFor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

